Email authentication implemented and User registration credentials added.